--- a/informacion.html
+++ b/informacion.html
@@ -119,10 +119,10 @@
     
          <div id="c-slider">
              <div id="slider">
-                 <section><img src="informacion/imagenes/1.jpg" alt=""></section>
-                 <section><img src="informacion/imagenes/2.jpg" alt=""></section>
-                 <section><img src="informacion/imagenes/3.jpg" alt=""></section>
-                 <section><img src="informacion/imagenes/4.jpg" alt=""></section>
+                 <section><img src="informacion/imagenes/1.JPG" alt=""></section>
+                 <section><img src="informacion/imagenes/2.JPG" alt=""></section>
+                 <section><img src="informacion/imagenes/3.JPG" alt=""></section>
+                 <section><img src="informacion/imagenes/4.JPG" alt=""></section>
              </div>
              <div id="btn-prev">&#60;</div>
              <div id="btn-next">&#62;</div>
