--- a/informacion.html
+++ b/informacion.html
@@ -121,7 +121,7 @@
              <div id="slider">
                  <section><img src="informacion/imagenes/1.JPG" alt=""></section>
                  <section><img src="informacion/imagenes/2.JPG" alt=""></section>
-                 <section><img src="informacion/imagenes/3.jpg" alt=""></section>
+                 <section><img src="informacion/imagenes/3.JPG" alt=""></section>
                  <section><img src="informacion/imagenes/4.JPG" alt=""></section>
              </div>
              <div id="btn-prev">&#60;</div>
